src/test/deca/context/invalid/pierre/objects/overrideWrongSig.deca
class A {
    void method(int i) {}
}
class B extends A {
    void method() {}
}
{}